--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>movie-service</artifactId>
+    <artifactId>movie</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>movie-service</name>
+    <name>movie</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
-        <remote.server>http://157.230.21.103/manager/text</remote.server>
+        <remote.server>https://startcode.mydemos.dk/manager/text</remote.server>
         
     </properties>
     
